  * Modified splitDRX.py to cope with DRX data that begins with frames that list a decimation of zero
  * Added support for parsing the OBS_DRX_GAIN and OBS_TBN_GAIN keywords in the SDF parser
  * Cleaned up drxSpectra.py to better deal with files that have a tuning missing at the beginning or where the sample rate changes at the beginning of the file

0.5.2
  * Fixed a bug in gatherDebugging.py that caused the script to crash on missing modules
  * Fixed a bug in FEnginep[RC][23] that caused segmentation faults in Python 2.7
  * Made the module path finder a little more robust
  * Updated the LWA1 SSMIF to the May 16, 2012 version to include the latest antenna status codes
  * Added a beamformer to lsl.common.dp.SoftwareDP
  * Changed lsl.common.dp.SoftwareDP.apply() to lsl.commondp.SoftwareDP.applyFilter()
  * Fixed multi-threading in the lsl.common.dp.SoftwareDP class
  * Added a clock offset parameter to the cable model (lsl.common.stations.Cable)
  * Cleaned up the correlateTBW.py scripts
  * Fixed a bug in the correlator integer sample delays
  * Fixed bugs in the lsl.misc.beamformer module related to delays
  * Fixed the URL used by lsl.misc.geodesy.__loadHistoric1992()
  * Added support for FreeBSD
  * Added datetime <-> MJD/MPM conversion functions to lsl.common.mcs
  * Converted lsl.common.progress.ProgressBar to a rotating progress bar

0.5.1
  * Added jinja2 to the list of install dependencies
  * Fixed the segfault associated with the DR spectrometer reader
  * Cleaned up how splitDRX.py offsets in a file
  * Removed splitTBW.py since it is no longer needed
  * Fixed a few bugs in the SDF parser dealing the logging keywords
  * Modified lsl.common.metabundle.getSessionDefinition to use the SDF in the tarball rather than generate it from the session and observation specification files
  * Made drxSpectra.py robust against DRX frames with decimation of zero
  * Made the SDF parser more robust against single word names

0.5.0