@@ -2,10 +2,12 @@
 
 """
 lsl.misc - Miscellanous modules including:
- * mathutil     - math utilities that were part of the lwa_user package, 
- * geodesy      - module for retrieving earth orientation parameters,
- * beamformer   - post data aquisition beam former for TBW and TBN data, and
- * dedispersion - incoherent dedispersion module.
+ * mathutil       - math utilities that were part of the lwa_user package, 
+ * geodesy        - module for retrieving earth orientation parameters,
+ * beamformer     - post data aquisition beam former for TBW and TBN data, and
+ * dedispersion   - incoherent dedispersion module.
+ * autostereogram - make random dot autostereograms from 2-D NumPy arrays
+ * OrderedDict    - backport of the OrderedDict class from Python 2.7
 """
 
 
